--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-calendar",
-  "version": "4.0.1",
+  "name": "calendar-react",
+  "version": "0.0.1",
   "description": "Ultimate calendar for your React app.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
